[package]
name = "acp_agents_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
makepad-widgets = { git = "https://github.com/wyeworks/makepad", branch = "moly" }
moly-kit = { path = "../../../../moly/moly-kit", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
